--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
         <a href="#carros">Carros</a>
         <a href="#contato">Contato</a>
         <a href="#sobre">Sobre Nós</a>
-        <a href="motos.html">Outro site</a>
+        <a href="motos.html">Motos</a>
     </nav>
 
     <!-- Seção de Carros Disponíveis -->
@@ -196,9 +196,7 @@
     <footer>
         <p>&copy; 2024 Loja de Carros. Todos os direitos reservados.</p>
     </footer>
-    <section id="site2">
-        <a href="https://caiorg08.github.io/HTML/;">site</a>
-    </section>
+   
 
 </body>
 </html>
