--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -22,7 +23,8 @@
         }
 
         header img {
-            width: 150px; /* Alterar o tamanho do logo */
+            width: 150px;
+            /* Alterar o tamanho do logo */
         }
 
         /* Menu de navegação */
@@ -103,7 +105,8 @@
             align-items: center;
         }
 
-        .contact-section input, .contact-section textarea {
+        .contact-section input,
+        .contact-section textarea {
             width: 80%;
             padding: 10px;
             margin: 10px 0;
@@ -137,49 +140,79 @@
         }
     </style>
 </head>
+
 <body>
 
     <!-- Cabeçalho com logo -->
     <header>
-        <img src="https://mgveiculosrs.com.br/images/logo.png" alt="Logo da Loja de Carros"> <!-- Altere o caminho da imagem do logo -->
+        <img src="https://th.bing.com/th/id/R.29f50ffe00f3b75dca6ce48073505ddb?rik=%2bWgPhfBvlGF1AA&riu=http%3a%2f%2fclipart-library.com%2fimages_k%2fcamaro-silhouette%2fcamaro-silhouette-14.png&ehk=Q2ZKKZRoVxIzW9NEmIvfsgZqLWfL8CKnhyy%2f52Qto8M%3d&risl=&pid=ImgRaw&r=0"
+            alt="Logo da Loja de Carros"> <!--  imagem do logo -->
     </header>
 
     <!-- Menu de navegação -->
     <nav>
-        <a href="#home">Início</a>
-        <a href="#carros">Carros</a>
+
+
         <a href="#contato">Contato</a>
-        <a href="#sobre">Sobre Nós</a>
+        <a href="carros.html">Carros</a>
         <a href="motos.html">Motos</a>
+        <a href="sobrenos.html">Sobre Nós</a>
     </nav>
 
     <!-- Seção de Carros Disponíveis -->
-    <section id="carros" class="car-section">
-        <h2>Carros Disponíveis</h2>
-        <div class="car-cards">
-            <!-- Cartão de carro 1 -->
-            <div class="car-card">
-                <img src="https://th.bing.com/th/id/OIP.MwgEreerLFCVU2odT_POlQHaE7?w=263&h=180&c=7&r=0&o=5&dpr=1.5&pid=1.7" alt="Carro 1"> <!-- Altere para a imagem do carro 1 -->
-                <h3>ferrari F40</h3>
-                <p>Preço: R$ 23.000.000,00</p>
-                <p>A Ferrari F40 é um automóvel superesportivo coupé de duas portas, de tração traseira e motor central-traseiro, projetado com conceitos aerodinâmicos utilizados em carros de competição.</p>
-            </div>
-            <!-- Cartão de carro 2 -->
-            <div class="car-card">
-                <img src="https://th.bing.com/th/id/OIP.renOdFpu0SV8u6J70AWzUAHaE8?w=233&h=180&c=7&r=0&o=5&dpr=1.5&pid=1.7" alt="Carro 2"> <!-- Altere para a imagem do carro 2 -->
-                <h3>BMW 320i</h3>
-                <p>Preço: R$ 332.950,00</p>
-                <p>BMW 320 foi um carro fabricado pela BMW na Alemanha de 1937 a 1938, como sucessor do BMW 329 baseado no 319. Foi oferecido em versões sedã de 2 portas e conversível. Aproximadamente 4.200 carros foram feitos, dos quais 1.835 eram cabriolets. </p>
-            </div>
-            <!-- Cartão de carro 3 -->
-            <div class="car-card">
-                <img src="https://cdn.motor1.com/images/mgl/9mNXkX/s1/q-by-aston-martin-new-york.jpg" alt="Carro 3"> <!-- Altere para a imagem do carro 3 -->
-                <h3>Aston Martin DB12</h3>
-                <p>Preço: R$ 3.600.000,00</p>
-                <p>O Aston Martin DB12 é um carro de turismo produzido pela fabricante britânica Aston Martin. O carro foi revelado em maio de 2023 como substituto do DB11. O DB12 foi apresentado em 24 de maio de 2023 no Festival de Cinema de Cannes de 2023. O DB12 também é o primeiro veículo da Aston Martin a usar o novo logotipo da marca.</p>
-            </div>
-        </div>
-    </section>
+    <h1 style="text-align: center;">
+        <h2 style="text-align: center;"> Bem-vindo à Hayato - Sua Melhor Escolha em Veículos</h2>
+        <br>
+        <br>
+        <h2 style="text-align: center;"> Encontre o Carro dos Seus Sonhos Aqui!</h2>
+        <br>
+        <p style="text-align: center;"> Na Hayato, somos apaixonados por carros e comprometidos em proporcionar a você a
+            melhor experiência de compra.<br> Seja você um comprador de primeira viagem, um entusiasta de carros de luxo
+            ou alguém em busca de um modelo mais econômico, temos o veículo perfeito para suas necessidades!</p>
+
+        <h2 style="text-align: center;"> Nossa Especialidade</h2>
+        <p style="text-align: center;">Oferecemos uma ampla seleção de veículos novos, seminovos e de luxo, com a
+            garantia de qualidade e preços competitivos. Nossos carros passam por rigorosas inspeções para garantir que
+            você tenha o melhor em performance, segurança e confiabilidade.
+            O que você encontra na Hayato:
+            Carros Novos: Modelos das melhores marcas, com garantia de fábrica e condições imperdíveis.
+            Seminovos de Qualidade: Carros revisados, com preços acessíveis e ótimo estado de conservação.
+            Carros de Luxo e Esportivos: Para quem busca sofisticação, potência e exclusividade.
+            Financiamento e Consórcio: Planos de pagamento facilitados, com condições especiais para todos os perfis de
+            cliente.
+            Destaques do Mês
+            Promoção Exclusiva de Fim de Ano!
+            Não perca nossas ofertas especiais! Descontos imperdíveis em veículos selecionados e condições de
+            financiamento com taxas reduzidas. Confira agora!</p>
+
+        <h2 style="text-align: center;"> Ver Ofertas</h2>
+
+        <p style="text-align: center;">Por Que Escolher a Hayato?
+            Atendimento Personalizado
+            Nossos consultores especializados estão prontos para ajudar você a encontrar o carro dos seus sonhos.
+            Entendemos suas necessidades e oferecemos as melhores opções para o seu perfil.
+
+            Veículos Inspecionados
+            Todos os carros da Hayato passam por uma rigorosa inspeção para garantir que você leve para casa um produto
+            de qualidade. Transparência é nossa prioridade.
+
+            Facilidade de Pagamento
+            Com planos de financiamento flexíveis e consórcios personalizados, facilitamos a sua compra. Aqui, você
+            encontra condições que cabem no seu bolso!
+
+            Test-Drive? Agende Agora!
+            Nada melhor do que sentir o carro na estrada! Agende um test-drive e experimente a sensação de dirigir seu
+            novo veículo com todo o conforto e performance que você merece.</p>
+
+        <h2 style="text-align: center;"> Agendar Test-Drive</h2>
+
+        <p style="text-align: center;">Nossos Serviços
+            Além de vender carros, a Hayato oferece uma gama de serviços para cuidar do seu veículo:
+
+            Assistência Pós-Venda: Garantia e suporte técnico, para que você tenha tranquilidade mesmo após a compra.
+            Troca de Veículo: Quer trocar seu carro atual por um novo ou seminovo? A Hayato facilita sua negociação!
+            Revisões e Manutenções: Cuide do seu carro com nossa oficina especializada.</p>
+    </h1>
 
     <!-- Seção de Contato -->
     <section id="contato" class="contact-section">
@@ -196,7 +229,7 @@
     <footer>
         <p>&copy; 2024 Loja de Carros. Todos os direitos reservados.</p>
     </footer>
-   
 
+    <script src="script.js"></script>
 </body>
 </html>
