--- a/compras.html
+++ b/compras.html
@@ -79,6 +79,10 @@
             background-color: #ccc;
             color: #190c94;
         }
+        nav{
+            display: none
+            ;
+        }
     </style>
 </head>
 <body>
