--- a/ferrari-296-gtb.html
+++ b/ferrari-296-gtb.html
@@ -86,6 +86,27 @@
             background-color: #ccc;
             color: #190c94;
         }
+        .buy-button {
+            background-color: #d30c0c;
+            padding: 10px 20px;
+            border: none;
+            cursor: pointer;
+            border-radius: 4px;
+            font-size: 1.1em;
+            margin-top: 20px;
+            transition: 0.3s;
+        
+        }
+        .buy-button:hover{
+            background-color: #ccc;
+            color: #df0808;
+
+        }
+
+        nav{
+
+            display: none;
+        }
     </style>
 </head>
 <body>
@@ -111,6 +132,7 @@
         <p><strong>Desempenho:</strong> Velocidade máxima de 330 km/h.</p>
         
         <button class="back-button" onclick="window.location.href='carros.html';">Voltar</button>
+        <button class="buy-button" onclick="window.location.href='compras.html?carro=Ferrai+296+GTB&preco=  3.929.243,00';">Comprar</button>
     </div>
 
     <footer>
