--- a/ferrari-f40.html
+++ b/ferrari-f40.html
@@ -86,6 +86,28 @@
             background-color: #ccc;
             color: #190c94;
         }
+        .buy-button {
+            background-color: #d30c0c;
+            padding: 10px 20px;
+            border: none;
+            cursor: pointer;
+            border-radius: 4px;
+            font-size: 1.1em;
+            margin-top: 20px;
+            transition: 0.3s;
+        
+        }
+        .buy-button:hover{
+            background-color: #ccc;
+            color: #df0808;
+
+        }
+
+        nav{
+
+            display: none;
+        }
+
     </style>
 </head>
 <body>
@@ -111,6 +133,7 @@
         <p><strong>Desempenho:</strong> Velocidade máxima de 324 km/h.</p>
         
         <button class="back-button" onclick="window.location.href='carros.html'">Voltar</button>
+        <button class="buy-button" onclick="window.location.href='compras.html?carro=Ferrai+F40&preco= 23.000.000,00';">Comprar</button>
     </div>
 
     <footer>
