--- a/motos.html
+++ b/motos.html
@@ -62,9 +62,9 @@
         }
 
         .car-card {
-            background-color: white;
-            border-radius: 8px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            background-color: rgb(238, 238, 238);
+            border-radius: 10px;
+            box-shadow: 0px 4px 8px rgba(246, 245, 245, 0);
             width: 30%;
             margin: 10px;
             padding: 10px;
@@ -72,11 +72,10 @@
         }
 
         .car-card img {
-            width: 100%;
-            height: auto;
-            border-radius: 8px;
+            width: 300px;
+            height: 200px;
+            border-radius: 10px;
         }
-
         .car-card h3 {
             color: #333;
         }
@@ -276,24 +275,26 @@
             }
 
             .search-input {
-                width: 200px;
-                height: 50px;
+            width: 190px;
+            height: 48px;
+            border-radius: 4px 0px 0px 4px;
+            margin-left: 50px;
+            padding-top: 5px;
 
-                margin-left: 15px;
+        
+        }
 
-            }
-
-            .search-button {
-                width: 150px;
-                height: 50px;
-                border-radius: 0px 4px 4px 0px;
-                border: none;
-                background-color: blue;
-                color: white;
-                font-size: 1.1em;
-                transition: 0.2s ease;
-                text-align: center;
-            }
+        .search-button {
+            width: 150px;
+            height: 54px;
+            border-radius: 0px 4px 4px 4px;
+            border: none;
+            background-color: blue;
+            color: white;
+            font-size: 1.1em;
+            transition: 0.2s ease;
+            text-align: center;
+        }
 
             .title-wrapper-catalog {
                 margin-top: 75px;
@@ -383,6 +384,9 @@
                     alt="Carro 2"> <!-- Altere para a imagem do carro 2 -->
                 <h3>Tiger 900 GT</h3>
                 <p>Preço: R$ 70.000,00</p>
+                <div class="card-item">
+                    <a href="susuki.html"><button type="button">Quero este!</button></a>
+                </div>
 
             </div>
             <!-- Cartão de carro 3 -->
@@ -391,6 +395,9 @@
                     alt="Carro 3"> <!-- Altere para a imagem do carro 3 -->
                 <h3>XT 660</h3>
                 <p>Preço: R$ 47.300,00</p>
+                <div class="card-item">
+                    <a href="susuki.html"><button type="button">Quero este!</button></a>
+                </div>
 
             </div>
         </div>
