--- a/carros.html
+++ b/carros.html
@@ -218,26 +218,29 @@
             padding-right: 20px;
         }
         .search-input {
-            width: 190px;
-            height: 48px;
-            border-radius: 4px 0px 0px 4px;
-            margin-left: 50px;
-            padding-top: 5px;
+                width: 50%;
+                height: 48px;
+                border-radius: 4px 4px 4px 4px;
+                padding: 10px;
+                margin-left: 8%;
 
-        
-        }
+            }
 
-        .search-button {
-            width: 150px;
-            height: 54px;
-            border-radius: 0px 4px 4px 4px;
-            border: none;
-            background-color: blue;
-            color: white;
-            font-size: 1.1em;
-            transition: 0.2s ease;
-            text-align: center;
-        }
+            .search-button {
+                width: 60%; 
+                
+                height: 47px;
+                border-radius: 4px 4px 4px 3px;
+                border: none;
+                background-color: blue;
+                color: white;
+                font-size: 1.1em;
+                transition: 0.2s ease;
+                text-align: center;
+                margin-top: 10px;
+                display: inline-block; /* Ajusta para manter o alinhamento */
+                margin-left: -10px;
+            }
         .title-wrapper-catalog{
             margin-top: 75px;
             padding-bottom: 20px;
